src/styles/PostCard.module.css
.image {
  background-size: cover;
  background-position: bottom;
  filter: blur(5px) saturate(0);
  display: flex;
}

.textBox {
  background-image: linear-gradient(
    rgba(0, 0, 0, 0.001) 0%,
    rgba(0, 0, 0, 0.25) 15%,
    rgba(0, 0, 0, 0.25) 86%,
    rgba(0, 0, 0, 0.001) 100%
  );
  width: 100%;
  position: absolute;
  font-family: "Lato", sans-serif;
  padding: 16px 0;
  text-align: center;
}

.textBox.main {
  padding: 24px 0;
}

.container {
  position: relative;
  overflow-y: hidden;
}

.text {
  text-transform: uppercase;
  text-align: center;
  color: white;
  padding: 8px 0;
}

.button {
  padding: 16px 24px;
  border: none;
  color: black;
  background-color: white;
  text-transform: uppercase;
  border-radius: 20px;
  cursor: pointer;
  margin: 16px auto;
  display: block;
}

.top {
  top: 0;
}

.bottom {
  bottom: 0;
}

.title {
  font-weight: 700;
  font-size: 20px;
  letter-spacing: 2px;
  padding: 0 16px;
}

.title-main {
  font-size: 32px;
  letter-spacing: 4px;
  padding: 0 24px;
}

.subtitle {
  font-size: 16px;
  margin: 0;
}

.main-post-card-subtitle {
  font-size: 24px;
  letter-spacing: 2px;
  margin: 8px 0;
}

.grid-card {
  height: 360px;
}

.main-post-card {
  height: calc(100vh - 60px);
}

.liven-up {
  animation-name: liven;
  animation-duration: 5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.scroll-down-icon {
  z-index: 1;
  font-size: 44px;
  bottom: 0;
  right: 24px;
  border: 1px solid white;
  padding: 12px;
  cursor: pointer;
  position: absolute;
  background-color: white;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  color: var(--font-grey);
}

.scroll-down-icon.is-top {
  right: calc(50% - 30px);
}

@media (max-width: 1200px) {
  .grid-card {
    height: 55vw;
  }
}

@media (max-width: 720px) {
  .title.text {
    font-size: 24px;
  }

  .button {
    margin: 0 auto;
  }

  .button:not(.main) {
    padding: 8px 12px;
    font-size: 12px;
    font-weight: 500;
    border-radius: 12px;
  }

  .grid-card {
    height: 75vw;
  }

  .subtitle.text {
    font-size: 16px;
  }

  .title-main {
    letter-spacing: 2px;
  }

  .main-post-card-subtitle {
    font-size: 20px;
    letter-spacing: 1px;
    margin: 0;
  }

  .textBox.main {
    padding: 24px 0;
  }

  .textBox {
    padding: 16px 0;
  }
}

@keyframes liven {
  from {
    filter: blur(5px) saturate(0);
  }
  to {
    filter: blur(0) saturate(1);
  }
}

